[package]
name = "xenctrl-sys"
version = "0.1.2"
authors = ["Mathieu Tarral <mathieu.tarral@protonmail.com>"]
edition = "2018"
description = "Rust FFI bindings for libxenctrl"
readme = "README.md"
homepage = "https://github.com/Wenzel/xenctrl-sys"
repository = "https://github.com/Wenzel/xenctrl-sys"
license = "GPL-3.0-only"
keywords = ["xen", "xenctrl"]
categories = ["external-ffi-bindings"]
links = "xenctrl"
build = "build.rs"

[dependencies]

[build-dependencies]
bindgen = "0.69.4"
